--- a/cn.zh-CN/实例/选择实例规格/计算型.md
+++ b/cn.zh-CN/实例/选择实例规格/计算型.md
@@ -28,7 +28,7 @@ c7的特点如下：
 -   支持vTPM特性，依托TPM/TCM芯片，实现从服务器到实例的启动链可信度量，提供超高安全能力。
 -   计算：
     -   处理器与内存配比为1:2
-    -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），全核睿频3.5 GHz，计算性能稳定
+    -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），基频2.7 GHz，全核睿频3.5 GHz，计算性能稳定
     -   支持开启或关闭超线程配置
 -   存储：
     -   I/O优化实例
