--- a/cn.zh-CN/实例/选择实例购买方式/抢占式实例/查询抢占式实例中断事件.md
+++ b/cn.zh-CN/实例/选择实例购买方式/抢占式实例/查询抢占式实例中断事件.md
@@ -6,9 +6,13 @@
 
 以云监控Java SDK为例，介绍如何查询抢占式实例中断事件。
 
-1.  接入云监控SDK，具体操作请参见[Java SDK使用手册](/cn.zh-CN/SDK参考/Java SDK使用手册.md)。
+1.  接入云监控SDK。
+
+    具体操作，请参见[Java SDK使用手册](/cn.zh-CN/SDK参考/Java SDK使用手册.md)。
 
 2.  通过SDK查询系统事件。
+
+    示例代码如下所示：
 
     ```
     import com.aliyuncs.DefaultAcsClient;
@@ -49,7 +53,7 @@
 
 3.  根据返回结果判断抢占式实例中断事件。
 
-    事件通知的JSON格式如下所示。
+    事件通知的JSON格式如下所示：
 
     ```
     {
@@ -73,8 +77,8 @@
 
     |字段|说明|示例值|
     |--|--|---|
-    |instanceId|抢占式实例ID。|i-bp1ecr\*\*\*\*\*\*\*\*5go2go|
-    |action|抢占式实例的操作事件。取值delete表示抢占式实例中断，将被强制回收。|delete|
+    |instanceId|抢占式实例的ID。|i-bp1ecr\*\*\*\*\*\*\*\*5go2go|
+    |action|抢占式实例的操作事件。取值delete时表示抢占式实例中断，将被强制回收。|delete|
 
 
 ## 通过实例元数据获取查询抢占式实例中断事件
@@ -87,14 +91,14 @@
     curl 'http://100.100.100.200/latest/meta-data/instance/spot/termination-time'
     ```
 
-    -   如果返回为空，说明实例可持续使用。
+    -   如果返回Http Code为404，说明实例可持续使用。
     -   如果返回类似`2015-01-05T18:02:00Z`格式的信息（UTC时间），说明实例将于这个时间回收。
 
 ## 通过API查询抢占式实例中断事件
 
-使用[DescribeInstances](/cn.zh-CN/API参考/实例/DescribeInstances.md)，根据返回的OperationLocks判断实例是否进入待回收状态。
+调用[DescribeInstances](/cn.zh-CN/API参考/实例/DescribeInstances.md)，并根据返回的OperationLocks判断实例是否进入待回收状态。
 
-代码示例（DescribeInstancesSample.java）如下所示。
+代码示例（DescribeInstancesSample.java）如下所示：
 
 ```
 import com.alibaba.fastjson.JSONArray;
@@ -121,9 +125,9 @@ public class DescribeInstancesSample {
             request.setRegionId("cn-hangzhou");
             // 指定实例ID，查询效率高。
             request.setInstanceIds(allInstances.toJSONString());
-            // 接收响应结果
+            // 接收响应结果。
             DescribeInstancesResponse response = caller.doAction(request);
-            // 获取实例相关的返回结果
+            // 获取实例相关的返回结果。
             List<DescribeInstancesResponse.Instance> instanceList = response.getInstances();
             if (instanceList != null && !instanceList.isEmpty()) {
                 for (DescribeInstancesResponse.Instance instance : instanceList) {
