--- a/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -498,6 +498,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
+-   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001382、KB5001403
+-   修复CVE-2021-28325漏洞 |
 |Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210316.vhd
 -   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210316.vhd
 
@@ -610,6 +615,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
+-   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001347、KB5001402
+-   修复CVE-2021-28325漏洞 |
 |Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210316.vhd
 -   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210316.vhd
 
@@ -722,6 +732,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210416.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001342、KB5001404
+-   修复CVE-2021-28325、CVE-2021-28442漏洞 |
+|Windows Server 2019 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001342、KB5001404
+-   修复CVE-2021-28325、CVE-2021-28442漏洞 |
 |Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210316.vhd
 -   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210316.vhd
 
@@ -1003,6 +1023,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210416.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001330
+-   修复CVE-2021-28325、CVE-2021-28324、CVE-2021-28442漏洞 |
+|Windows Server Version 2004 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_alibase\_20210416.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_alibase\_20210416.vhd
+
+|2021-04-16|-   更新2021年04月份系统补丁：KB5001330
+-   修复CVE-2021-28325、CVE-2021-28324、CVE-2021-28442漏洞 |
 |Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210316.vhd
 -   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210316.vhd
 
