--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -3,7 +3,7 @@
 本章节介绍了云服务器ECS的产品功能和对应的文档动态。
 
 -   镜像版本更新信息请参见[公共镜像发布记录](/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md)及[Alibaba Cloud Linux 2发布记录](/cn.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2发布记录.md)。
--   服务器迁移中心SMC功能更新信息请参见[新功能发布记录](/cn.zh-CN/新功能发布记录/新功能发布记录.md)。
+-   服务器迁移中心SMC功能更新信息请参见[SMC新功能发布记录](/cn.zh-CN/新功能发布记录/新功能发布记录.md)。
 
 更多有关阿里云最新产品动态，请订阅[云产品动态](https://www.aliyun.com/product/new)。
 
@@ -450,7 +450,7 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
-|经典网络|从17:00（UTC+8）时刻以后第一次创建ECS实例的用户，不能选择经典网络，建议您使用专有网络VPC。|2017-06-14|全部|[什么是专有网络]()|
+|经典网络|从17:00（UTC+8）时刻以后第一次创建ECS实例的用户，不能选择经典网络，建议您使用专有网络VPC。|2017-06-14|全部|[什么是专有网络](/cn.zh-CN/产品简介/什么是专有网络.md)|
 
 ## 2017年5月
 
