--- a/intl.zh-CN/动态与公告/新功能发布记录.md
+++ b/intl.zh-CN/动态与公告/新功能发布记录.md
@@ -3,7 +3,7 @@
 本章节介绍了云服务器ECS的产品功能和对应的文档动态。
 
 -   镜像版本更新信息请参见[公共镜像发布记录](/intl.zh-CN/镜像/公共镜像/公共镜像发布记录.md)及[Alibaba Cloud Linux 2发布记录](/intl.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2发布记录.md)。
--   服务器迁移中心SMC功能更新信息请参见[新功能发布记录](/intl.zh-CN/新功能发布记录/新功能发布记录.md)。
+-   服务器迁移中心SMC功能更新信息请参见[SMC新功能发布记录](/intl.zh-CN/新功能发布记录/新功能发布记录.md)。
 
 ## 2021年04月
 
