--- a/cn.zh-CN/实例/升降配实例/支持变配的实例规格.md
+++ b/cn.zh-CN/实例/升降配实例/支持变配的实例规格.md
@@ -22,10 +22,10 @@
 -   大数据型：d2c、d2s、d1、d1ne
 -   本地SSD型：i1、i2、i2g、i2ne、i2gne、i3、i3g
 -   GPU计算型：vgn5i、gn5
+-   异构服务型：video-enhance、video-trans
 -   FPGA计算型：f1、f3
 -   弹性裸金属服务器：
     -   ebmgn7、ebmgn6e、ebmgn6v、ebmgn6i
-    -   video-trans
     -   ebmg6、ebmg5s、ebmg5、ebmc6、ebmc5s、ebmc4、ebmre6p、ebmr6、ebmr5s
     -   ebmhfg6、ebmhfg5、ebmhfc6、ebmhfr6
 -   超级计算集群（SCC）：scchfg6、scchfc6、scchfr6、sccg5、scch5、sccgn6e、sccgn6
