--- a/cn.zh-CN/实例/选择实例购买方式/按量付费.md
+++ b/cn.zh-CN/实例/选择实例购买方式/按量付费.md
@@ -14,7 +14,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 **说明：** 变配对计费的影响请参见[变更配置后计费](#section_3tp_wxa_6qh)。
 
-创建按量付费ECS资源后，您可以变更资源计费方式。具体操作，请参见[按量付费转包年包月](/cn.zh-CN/产品定价/转换计费方式/按量付费转包年包月.md)。
+创建按量付费ECS资源后，您可以变更资源计费方式。具体操作，请参见[按量付费转包年包月](/cn.zh-CN/产品计费/转换计费方式/按量付费转包年包月.md)。
 
 使用按量付费ECS资源时，您可以从以下方面了解实际消费情况：
 
@@ -50,13 +50,13 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
     -   云盘
     -   公网带宽（按固定带宽）
 
-        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/cn.zh-CN/产品定价/计费项/公网带宽计费.md)。
+        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/cn.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 -   **镜像费用**表示您使用了付费镜像，费用单独列出。
 
 ## 开通要求
 
-开通按量付费ECS资源时，您的阿里云账户余额、代金券和优惠券的总值不得小于100.00元人民币。
+开通按量付费ECS资源时，您的阿里云账户余额（即现金余额）和代金券的总值不得小于100.00元人民币。
 
 充值方式和步骤请参见[如何充值？](https://help.aliyun.com/document_detail/37107.html)。
 
@@ -81,10 +81,10 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 |云盘（数据盘）|秒|云盘单价 \* 云盘容量 \* 计费时长 此处数据盘包括随按量付费实例创建的数据盘和在云盘页面单独创建的按量付费数据盘。
 
 |请参见[云服务器ECS详细价格总览](https://www.aliyun.com/price/product#/ecs/detail)下的**磁盘价格信息**。|
-|公网带宽（按固定带宽）|秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/cn.zh-CN/产品定价/计费项/公网带宽计费.md)。
+|公网带宽（按固定带宽）|秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/cn.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 |固定带宽阶梯计费，请参见[云服务器ECS详细价格总览](https://www.aliyun.com/price/product#/ecs/detail)下的**带宽价格信息**。|
-|快照|小时|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/cn.zh-CN/产品定价/计费项/快照计费.md)。
+|快照|小时|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/cn.zh-CN/产品计费/计费项/快照计费.md)。
 
 |请参见[阿里云块存储定价页面](https://www.aliyun.com/price/product#/disk/detail)下的**快照服务费用细则**。|
 
@@ -110,7 +110,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 |计算资源（vCPU和内存）|计算资源（vCPU和内存）在整个生命周期内的计费时长和网络类型有关： -   对经典网络实例，从按量付费实例创建完成开始计费，到实例释放时结束计费。
 -   对专有网络实例，和是否开启停机不收费功能有关。
     -   如果未开启停机不收费，从按量付费实例创建完成开始计费，到实例释放时结束计费。
-    -   如果开启了停机不收费，从按量付费实例创建完成开始计费，通过控制台停止实例时暂停计费，通过控制台重新启动实例后重新开始计费，实例释放时结束计费。 更多信息请参见[按量付费实例停机不收费](/cn.zh-CN/产品定价/计费方式/按量付费实例停机不收费.md)。
+    -   如果开启了停机不收费，从按量付费实例创建完成开始计费，通过控制台停止实例时暂停计费，通过控制台重新启动实例后重新开始计费，实例释放时结束计费。 更多信息请参见[按量付费实例停机不收费](/cn.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md)。
 
 **说明：** 在实例内部操作系统关机不能触发停机不收费的效果。
 
@@ -128,7 +128,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 ## 结算周期
 
-按量付费ECS资源每一个小时整点结算一次费用（以UTC+8时间为准），结算完毕后进入新的结算周期，如果您账户的可用额度（含阿里云账户余额、代金券、优惠券等）小于待结算的账单，会收到余额不足的短信或邮件提醒。
+按量付费ECS资源每一个小时整点结算一次费用（以UTC+8时间为准），结算完毕后进入新的结算周期，如果您账户的可用额度（含阿里云账户余额和代金券）小于待结算的账单，会收到余额不足的短信或邮件提醒。
 
 **说明：** 如果您的账户欠费，即使已经设置自动释放时间，按量付费实例也不会遵循设置的时间释放。更多欠费后资源状态变化说明，请参见[欠费后资源状态变化](#section_w1c_zw2_zdb)。
 
@@ -155,7 +155,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 ## 欠费后资源状态变化
 
-如果您账户的可用额度（含阿里云账户余额、代金券、优惠券等）小于待结算的账单，即被判定为账户欠费。账户欠费会导致ECS实例停机，欠费停机期间相关ECS资源暂停计费。如果未在规定时间内充值结清欠费账单并重开机，您将不能正常使用ECS资源。
+如果您账户的可用额度（含阿里云账户余额和代金券）小于待结算的账单，即被判定为账户欠费。账户欠费会导致ECS实例停机，欠费停机期间相关ECS资源暂停计费。如果未在规定时间内充值结清欠费账单并重开机，您将不能正常使用ECS资源。
 
 **说明：** 重开机和重启是两个不同的概念。
 
