--- a/intl.zh-CN/实例/选择实例购买方式/按量付费.md
+++ b/intl.zh-CN/实例/选择实例购买方式/按量付费.md
@@ -12,7 +12,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 创建按量付费ECS资源后，您可以变更资源配置。具体操作，请参见[按量付费实例变配规格](/intl.zh-CN/实例/升降配实例/修改实例规格/按量付费实例变配规格.md)和[按量付费实例修改带宽](/intl.zh-CN/实例/升降配实例/修改带宽配置/按量付费实例修改带宽.md)。
 
-创建按量付费ECS资源后，您可以变更资源计费方式。具体操作，请参见[按量付费转包年包月](/intl.zh-CN/产品定价/转换计费方式/按量付费转包年包月.md)。
+创建按量付费ECS资源后，您可以变更资源计费方式。具体操作，请参见[按量付费转包年包月](/intl.zh-CN/产品计费/转换计费方式/按量付费转包年包月.md)。
 
 使用按量付费ECS资源时，您可以从以下方面了解实际消费情况：
 
@@ -48,7 +48,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
     -   云盘
     -   公网带宽（按固定带宽）
 
-        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/intl.zh-CN/产品定价/计费项/公网带宽计费.md)。
+        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 -   **镜像费用**表示您使用了付费镜像，费用单独列出。
 
@@ -62,10 +62,10 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 |镜像|秒|镜像单价 \* 计费时长|以售卖页和镜像市场显示的价格为准。|
 |云盘（系统盘）|秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **系统盘****说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
 |云盘（数据盘）|秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **数据盘**。 **说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
-|公网带宽（按固定带宽）|秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/intl.zh-CN/产品定价/计费项/公网带宽计费.md)。
+|公网带宽（按固定带宽）|秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 |固定带宽阶梯计费，请在售卖页选择带宽值后查看配置费用的变化。|
-|快照|小时|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/intl.zh-CN/产品定价/计费项/快照计费.md)。
+|快照|小时|快照单价 \* 快照容量 \* 计费时长 更多快照计费说明，请参见[快照计费](/intl.zh-CN/产品计费/计费项/快照计费.md)。
 
 |请参见[云服务器ECS产品详情页](https://www.alibabacloud.com/product/ecs)**快照服务费用细则**。|
 
@@ -91,7 +91,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 |计算资源（vCPU和内存）|计算资源（vCPU和内存）在整个生命周期内的计费时长和网络类型有关： -   对经典网络实例，从按量付费实例创建完成开始计费，到实例释放时结束计费。
 -   对专有网络实例，和是否开启停机不收费功能有关。
     -   如果未开启停机不收费，从按量付费实例创建完成开始计费，到实例释放时结束计费。
-    -   如果开启了停机不收费，从按量付费实例创建完成开始计费，通过控制台停止实例时暂停计费，通过控制台重新启动实例后重新开始计费，实例释放时结束计费。 更多信息请参见[按量付费实例停机不收费](/intl.zh-CN/产品定价/计费方式/按量付费实例停机不收费.md)。
+    -   如果开启了停机不收费，从按量付费实例创建完成开始计费，通过控制台停止实例时暂停计费，通过控制台重新启动实例后重新开始计费，实例释放时结束计费。 更多信息请参见[按量付费实例停机不收费](/intl.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md)。
 
 **说明：** 在实例内部操作系统关机不能触发停机不收费的效果。
 
