--- a/cn.zh-CN/实例/升降配实例/支持变配的实例规格.md
+++ b/cn.zh-CN/实例/升降配实例/支持变配的实例规格.md
@@ -18,6 +18,7 @@
 
 以下规格族不支持规格族之间以及规格族内部变更：
 
+-   持久内存型：re6p、re6p-redis
 -   安全增强型：g7t、c7t、r7t
 -   大数据型：d2c、d2s、d1、d1ne
 -   本地SSD型：i1、i2、i2g、i2ne、i2gne、i3、i3g
@@ -93,7 +94,6 @@
 -   c4、cm4、ce4、hfc5、hfg5、g5、g5ne、r5、c5、ic5、re4、t5、n4、mn4、xn4、e4 |
 |se1|-   se1
 -   sn1、sn2、 n1、n2、e3、sn1ne、sn2ne、se1ne、c4、cm4、ce4、hfc5、hfg5、g5、r5、c5、ic5、re4、t5、n4、mn4、xn4、e4 |
-|re6p|re6p|
 |re6|-   re6
 -   g6、c6、r6、hfc6、hfg6、hfr6、re4
 
