--- a/cn.zh-CN/运维与监控/云助手/混合云托管服务器.md
+++ b/cn.zh-CN/运维与监控/云助手/混合云托管服务器.md
@@ -43,6 +43,19 @@ keyword: [非阿里云安装云助手, 托管实例, 托管非阿里云服务器
     ```
 
 
+## 操作步骤
+
+根据您的服务器是否能够直接访问公网，参考以下步骤托管实例。
+
+-   您的服务器可以直接访问公网：
+    1.  [步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)
+    2.  [步骤二：在服务器上安装云助手客户端并注册实例（正常方式）](#section_6z6_wsc_i0n)
+    3.  [步骤三：在控制台查看托管实例](#section_por_q2b_931)
+-   您的服务器需要配置代理服务器才能访问公网：
+    1.  [步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)
+    2.  [步骤二：在服务器上安装云助手客户端并注册实例（代理方式）](#section_2pm_7s2_v2r)
+    3.  [步骤三：在控制台查看托管实例](#section_por_q2b_931)
+
 ## 步骤一：创建托管实例激活码
 
 本节介绍如何在控制台上创建托管实例的激活码，并生成安装脚本。
@@ -76,39 +89,47 @@ keyword: [非阿里云安装云助手, 托管实例, 托管非阿里云服务器
 
     ![生成脚本](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1009401161/p225668.png)
 
-8.  选择服务器对应的操作系统类型，单击**下载**，将安装脚本保存到本地。
+8.  选择服务器对应的操作系统类型，单击**下载**或**复制**，将安装脚本保存到本地。
 
     **说明：**
 
     -   生成激活码后，安装脚本只显示一次，您需要保存到本地。
     -   如果您存在多个操作系统，需要依次下载对应的安装脚本。
 
-## 步骤二：在服务器上安装云助手客户端并注册实例
+## 步骤二：在服务器上安装云助手客户端并注册实例（正常方式）
 
-获取安装脚本后，您需要将安装脚本上传到服务器上并进行安装。
+获取安装脚本后，您需要在服务器上安装云助手客户端并注册。如果您的服务器可以正常访问公网，可以参考此步骤；如果您的服务器需要通过代理服务器才能访问公网，请参见[步骤二：在服务器上安装云助手客户端并注册实例（代理方式）](#section_2pm_7s2_v2r)
 
-如果您的服务器为Linux操作系统，参考以下操作步骤：
+**在Linux服务器上安装云助手客户端并注册实例**
 
-1.  通过FTP等工具将安装脚本上传到服务器。
-2.  通过SSH等方式登录服务器。
-3.  运行以下命令，进入安装脚本所在目录。
+1.  通过SSH等方式登录服务器。
 
-    示例以用户home目录（~/）为例，您可以根据实际情况修改。
+2.  在服务器中创建安装脚本。
+
+    1.  运行以下命令，使用vim编辑器创建脚本。
+
+        ```
+        vim installAssistant.sh
+        ```
+
+    2.  按`i`键，进入编辑模式。
+
+    3.  粘贴ECS控制台上创建的脚本内容。具体信息，请参见[步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)。
+
+    4.  按`Esc`键，退出编辑模式。
+
+    5.  输入`：wq`，并按`Enter`键，保存并退出。
+
+3.  运行以下命令，为安装脚本设置执行权限。
 
     ```
-    cd ~/
+    sudo chmod 755 installAssistant.sh
     ```
 
-4.  运行以下命令，为安装脚本设置执行权限。
+4.  运行以下命令，在服务器上安装云助手客户端。
 
     ```
-    sudo chmod 755 <脚本名称>.sh
-    ```
-
-5.  运行以下命令，在服务器上安装云助手客户端。
-
-    ```
-    sudo ./<脚本名称>.sh
+    sudo ./installAssistant.sh
     ```
 
     安装结束后，如果返回以下信息，表示安装成功。
@@ -116,14 +137,213 @@ keyword: [非阿里云安装云助手, 托管实例, 托管非阿里云服务器
     ![linux返回结果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8543601161/p227024.png)
 
 
-如果您的服务器为Windows操作系统，参考以下操作步骤：
+**在Windows服务器上安装云助手客户端并注册实例**
 
-1.  通过FTP等工具将安装脚本上传到服务器。
-2.  使用管理员账号登录服务器。
-3.  进入安装脚本所在目录（例如C:/）。
-4.  右键单击安装脚本，单击**使用PowerShell运行**，开始安装云助手客户端。
+1.  通过**远程桌面连接**等方式远程登录服务器。
+
+2.  将安装脚本上传到服务器。
+
+    安装脚本请参见[步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)。
+
+    **说明：** **远程桌面连接**支持直接将脚本文件复制到服务器。如果您的网络环境有其他限制，导致不能直接复制，也可以通过FTP等其他软件上传脚本。
+
+3.  右键单击安装脚本，单击**使用PowerShell运行**，开始安装云助手客户端。
 
     ![windows安装脚本](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9554601161/p227027.png)
+
+
+## 步骤二：在服务器上安装云助手客户端并注册实例（代理方式）
+
+获取安装脚本后，您需要在服务器上安装云助手客户端并注册。如果您的服务器需要通过代理服务器才能访问公网，可以参考此步骤；如果您的服务器可以正常访问公网，请参见[步骤二：在服务器上安装云助手客户端并注册实例（正常方式）](#section_6z6_wsc_i0n)。
+
+**在Linux服务器上安装云助手客户端并注册实例**
+
+此处以Cent OS 7.8为例介绍如何设置代理服务器。如果您使用的是Debian等操作系统，需要根据控制台生成的安装脚本，修改对应的命令。
+
+![centos](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4873249161/p268369.png)
+
+-   ①：下载云助手客户端安装包
+-   ②：安装云助手客户端
+-   ③：注册为云助手托管实例
+
+如果您需要通过代理服务器访问公网，需要在这些命令的基础上配置相应的代理服务器信息。
+
+1.  通过SSH等方式登录服务器。
+
+2.  运行以下命令，通过代理服务器下载云助手客户端。
+
+    ```
+    sudo https_proxy=<http://your_proxy_address> && wget https://aliyun-client-assist.oss-accelerate.aliyuncs.com/linux/aliyun_assist_latest.rpm
+    ```
+
+    **说明：** 您需要将`<http://your_proxy_address>`改成您的代理服务器地址。
+
+3.  运行以下命令，安装云助手客户端。
+
+    ```
+    sudo rpm -ivh aliyun_assist_latest.rpm --force
+    ```
+
+4.  为云助手服务配置代理。
+
+    1.  修改云助手service配置文件。
+
+        修改云助手service配置文件，配置ALIYUN\_ASSIST\_PROXY环境变量。操作步骤如下所示：
+
+        1.  通过vim新建vim /etc/sysconfig/aliyun文件。
+
+            ```
+            sudo vim /etc/sysconfig/aliyun
+            ```
+
+        2.  输入以下内容并保存退出。
+
+            ```
+            ALIYUN_ASSIST_PROXY=<http://your_proxy_address>
+            ```
+
+            **说明：** 您需要将`<http://your_proxy_address>`改成您的代理服务器地址。
+
+        3.  通过vim编辑aliyun.service文件。
+
+            ```
+            sudo vim /etc/systemd/system/aliyun.service
+            ```
+
+        4.  修改EnvironmentFile参数值并保存退出。
+
+            ```
+            EnvironmentFile=/etc/sysconfig/aliyun
+            ```
+
+    2.  运行以下命令，重载systemd配置。
+
+        ```
+        sudo systemctl daemon-reload
+        ```
+
+    3.  运行以下命令，重启云助手服务。
+
+        ```
+         sudo systemctl restart aliyun.service
+        ```
+
+        启动云助手服务后，在云助手的日志中（默认日志路径：/usr/local/share/aliyun-assist/\{version\}/log/aliyun\_assist\_main.log），存在`Detected environment variable ALIYUN_ASSIST_PROXY for proxy setting`相关信息，即表示您已经为云助手服务配置了代理。
+
+5.  运行以下命令，通过代理服务器注册云助手托管实例。
+
+    1.  运行以下命令，配置代理服务器。
+
+        ```
+        sudo export ALIYUN_ASSIST_PROXY=<http://your_proxy_address>
+        ```
+
+        **说明：** 您需要将`<http://your_proxy_address>`改成您的代理服务器地址。
+
+    2.  运行以下命令，将服务器注册为云助手托管实例。
+
+        ```
+        sudo aliyun-service --register --RegionId "cn-hangzhou" \
+           --ActivationCode "a-hz0f5KlGmF/TsM5uBuq7Eqor+****" \
+           --ActivationId "045CE381-0404-4F42-A44B-CC232B3E****"
+        ```
+
+        **说明：** 此处仅作为示例，您需要直接复制控制台上生成的代码。更多信息，请参见[步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)。
+
+
+**在Windows服务器上安装云助手客户端并注册实例**
+
+此处以Windows Server 2016 数据中心版为例介绍如何设置代理服务器，Windows安装云助手脚本如下所示，您需要在配置代理服务器过程中使用到`RegionId`、`ActivationCode`和`ActivationId`的取值。
+
+![win脚本](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0839159161/p268965.png)
+
+1.  通过**远程桌面连接**等方式远程登录服务器。
+
+2.  设置浏览器的代理服务器。
+
+    1.  选择**开始菜单** \> **控制面板**。
+
+    2.  单击**网络和Internet**。
+
+    3.  单击**网络和共享中心**。
+
+    4.  单击左下角的**Internet选项**。
+
+        ![代理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8263349161/p268412.png)
+
+    5.  选择**连接**页签，单击**局域网设置**。
+
+    6.  在**代理服务器**区域，设置您的代理服务器地址和端口，单击**确定**。
+
+3.  下载云助手客户端安装包。
+
+    1.  单击开始菜单，选择**Windows PowerShell** \> **Windows PowerShell**。
+
+    2.  右键单击**Windows PowerShell**，选择**以管理员身份运行**。
+
+    3.  在**Windows PowerShell**对话框中，运行以下命令，下载云助手客户端安装包。
+
+        ```
+        Invoke-WebRequest -Uri 'https://aliyun-client-assist.oss-accelerate.aliyuncs.com/windows/aliyun_agent_latest_setup.exe' -OutFile 'C:\\aliyun_agent_latest_setup.exe'
+        ```
+
+4.  下载完成后，安装云助手客户端。
+
+    1.  进入C:\\盘。
+
+    2.  双击aliyun\_agent\_latest\_setup.exe，根据安装向导安装云助手客户端。
+
+5.  为云助手设置代理服务器。
+
+    1.  选择**开始菜单** \> **控制面板**。
+
+    2.  单击**系统和安全**。
+
+    3.  单击**系统**。
+
+    4.  单击左侧的**高级系统设置**。
+
+        ![设置代理](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0593339161/p267862.png)
+
+    5.  选择**高级**页签，单击**环境变量**。
+
+    6.  在**系统变量**区域，单击**新建**。
+
+    7.  配置**变量名**和**变量值**，单击**确定**。
+
+        -   **变量名**：设置为ALIYUN\_ASSIST\_PROXY。
+        -   **变量值**：设置为您的代理服务器。
+    8.  在**Windows PowerShell**中运行以下命令，重启云助手服务。
+
+        运行以下命令，停止云助手服务。
+
+        ```
+        net stop AliyunService
+        ```
+
+        运行以下命令，重新启动云助手服务
+
+        ```
+        net start AliyunService
+        ```
+
+6.  在**Windows PowerShell**中通过代理服务器注册云助手托管实例。
+
+    运行以下命令，进入云助手安装目录。
+
+    ```
+    cd C:\ProgramData\aliyun\assist\{version}
+    ```
+
+    **说明：** `{version}`表示云助手的版本号，您需要修改为安装的具体版本号。
+
+    运行以下命令，将服务器注册为云助手托管实例。
+
+    ```
+     .\aliyun_assist_service.exe  --register  --RegionId="cn-hangzhou" --ActivationCode="a-hz0f6dB8Fg6hhtK0A5n9xqqdH****" --ActivationId="0A2E5ECE-5C71-4FA3-807B-05962C25****"
+    ```
+
+    **说明：** 此处仅作为示例。`RegionId`、`ActivationCode`和`ActivationId`的取值，请修改为控制台自动生成脚本中的取值。更多信息，请参见[步骤一：创建托管实例激活码](#section_fhj_e5i_yr4)。
 
 
 ## 步骤三：在控制台查看托管实例
