--- a/cn.zh-CN/安全/安全组/企业安全组.md
+++ b/cn.zh-CN/安全/安全组/企业安全组.md
@@ -17,9 +17,8 @@ keyword: [安全组, 网络访问控制, 企业安全组]
 |支持经典网络|是|否|
 |支持设置规则优先级|是|是|
 |支持授权给其他安全组|是|否|
-|支持手动设置允许访问的安全组规则|是|是|
-|支持手动设置拒绝访问的安全组规则|是|是|
-|安全组出方向默认策略|默认允许安全组内ECS实例访问外部。|默认禁止安全组内ECS实例访问外部，您需要自行添加出方向允许规则。|
+|支持手动设置安全组规则|是|是|
+|安全组出方向默认策略（无安全组规则情况下）|默认允许安全组内ECS实例访问外部。|默认禁止安全组内ECS实例访问外部。**说明：** 在创建企业安全组时，系统会自动创建一条安全组规则，允许安全组内ECS实例访问外部。如果您需要禁止ECS实例访问外部，可以删除此规则。 |
 |支持绑定弹性网卡到任意实例规格|否，实例网络类型必须是专有网络VPC。|否，但实例网络类型必须是专有网络VPC。|
 |能容纳的私网IP地址数量|2000|65536|
 |默认支持同一个安全组内ECS实例互通|是|否，需要您单独添加安全组规则。|
