--- a/cn.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md
+++ b/cn.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md
@@ -26,7 +26,7 @@
 |根据操作系统类型，实现方式如下：-   Windows：如果无Windows操作系统上特定应用的VSS Writer参与时，默认创建的为文件系统一致性。
 -   Linux：如果无对应的应用脚本，默认创建的为文件系统一致性。 |
 
-**说明：** 应用一致性快照功能目前支持中国（香港）和新加坡地域，地域数量持续增加中。
+**说明：** 应用一致性快照功能目前支持中国（香港）、新加坡、华东1（杭州）、华东2（上海）和华北2（北京）地域，地域数量持续增加中。
 
 ## 操作流程
 
