--- a/cn.zh-CN/块存储/块存储介绍/云盘概述.md
+++ b/cn.zh-CN/块存储/块存储介绍/云盘概述.md
@@ -55,7 +55,10 @@ keyword: [云盘, 磁盘, ESSD, SSD云盘, 高效云盘]
 
 |限制项|限制|提升限额方式|
 |:--|:-|:-----|
-|创建按量付费云盘的用户限制|账号必须实名认证，而且账户余额、代金券和信用度之和不得小于100元。|无|
+|创建按量付费云盘的用户限制|-   账号必须实名认证。
+-   开通按量付费ECS资源时，您的阿里云账户余额（即现金余额）和代金券的总值不得小于100.00元人民币。
+
+|无|
 |按量云盘的总数量|在ECS管理控制台查看资源配额。具体操作，请参见[查看和提升资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。|无|
 |单实例系统盘数量|1|无|
 |单实例数据盘数量|g6se最多挂载64块，其他实例规格族最多挂载16块|无|
