--- a/cn.zh-CN/实例/管理实例/重开机实例.md
+++ b/cn.zh-CN/实例/管理实例/重开机实例.md
@@ -3,9 +3,9 @@
 在结清按量付费实例的欠费账单后请及时重开机，否则实例将会被释放。本文介绍重开机相关概念和操作。
 
 -   按量付费实例处于**已过期**或者**欠费回收中**状态。
--   您的账号已经充值，而且账号余额不少于100元人民币。关于充值操作，请参见[如何充值](https://help.aliyun.com/document_detail/37107.html)。
+-   您的阿里云账户余额（即现金余额）和代金券的总值不得小于100.00元人民币。关于充值操作，请参见[如何充值](https://help.aliyun.com/document_detail/37107.html)。
 
--   对于按量付费实例，如果账号当前的可用余额（包括现金、代金券、优惠券、预授权等）不能结清已出的账单，即判定为账号欠费。此时实例停机并进入**已过期**状态。
+-   对于按量付费实例，如果您账户的可用额度（含阿里云账户余额和代金券）小于待结算的账单，即被判定为账户欠费。此时实例停机并进入**已过期**状态。
 -   对于网络类型为经典网络的按量付费实例，您必须在停机后15天内结清账单并重开机。否则，实例会被释放，所有数据无法恢复。
 -   对于网络类型为VPC的按量付费实例，欠费停机后15天内随时会从**已过期**状态进入**欠费回收中**状态。进入**欠费回收中**状态之前，您可以结清账单并重开机。如果此时重开机成功，所有资源保留，不受影响。实例进入**欠费回收中**状态后，您仍然可以结清账单并重开机，但是，可能会重开机失败，请间隔一段时间后再试或提交工单解决。如果15天内不能结清账单重开机，实例将会被释放，所有数据无法恢复。
 
@@ -28,5 +28,5 @@
 **相关文档**  
 
 
-[t41739.md\#](/cn.zh-CN/API参考/实例/ReActivateInstances.md)
+[ReActivateInstances](/cn.zh-CN/API参考/实例/ReActivateInstances.md)
 
