--- a/cn.zh-CN/实例/创建实例/使用向导创建实例.md
+++ b/cn.zh-CN/实例/创建实例/使用向导创建实例.md
@@ -6,7 +6,7 @@
 
 1.  创建账号，以及完善账号信息。
     -   注册阿里云账号，并完成实名认证。具体操作，请参见[阿里云账号注册流程](https://help.aliyun.com/knowledge_detail/37195.htm)。
-    -   如果创建按量付费实例，您的阿里云账户余额、代金券和优惠券的总值不得小于100.00元人民币。具体充值操作，请参见[如何充值](https://help.aliyun.com/document_detail/37107.html?spm=a2c4g.11186623.2.5.CscUFl)。
+    -   开通按量付费ECS资源时，您的阿里云账户余额（即现金余额）和代金券的总值不得小于100.00元人民币。具体充值操作，请参见[如何充值](https://help.aliyun.com/document_detail/37107.html?spm=a2c4g.11186623.2.5.CscUFl)。
 2.  阿里云提供一个默认的专有网络VPC，如果您不想使用默认专有网络VPC，可以在目标地域创建一个专有网络和交换机。具体操作，请参见[搭建IPv4专有网络](/cn.zh-CN/快速入门/搭建IPv4专有网络.md)。
 3.  阿里云提供一个默认的安全组，如果您不想使用默认安全组，可以在目标地域创建一个安全组。具体操作，请参见[创建安全组](/cn.zh-CN/安全/安全组/创建安全组.md)。
 
