--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -201,7 +201,7 @@
 |2019-09-26|全部|-   [扩容概述](/cn.zh-CN/块存储/扩容云盘/扩容概述.md)
 -   [在线扩容云盘（Linux系统）](/cn.zh-CN/块存储/扩容云盘/在线扩容云盘（Linux系统）.md) |
 |实例规格族|发布弹性裸金属服务器实例规格族ebmc6、ebmg6、ebmr6。|2019-09-24|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
-|经典网络公网IP|手动释放经典网络类型ECS实例时，支持将公网IP转换为弹性公网IP（Elastic IP，简称EIP）。|2019-09-20|部分|[经典网络类型ECS公网IP转为弹性公网IP](/cn.zh-CN/网络/修改IPv4地址/经典网络类型ECS公网IP转为弹性公网IP.md)|
+|经典网络公网IP|手动释放经典网络类型ECS实例时，支持将公网IP转换为弹性公网IP（Elastic IP，简称EIP）。|2019-09-20|部分|[经典网络ECS实例的固定公网IP转换为EIP](/cn.zh-CN/网络/修改IPv4地址/经典网络类型ECS公网IP转为弹性公网IP.md)|
 |实例规格族|发布突发性能实例规格族t6。|2019-09-12|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |安全组|安全组规则上限提升到200条。|2019-09-03|全部|[使用限制](/cn.zh-CN/产品简介/使用限制.md)|
 |快照|手动快照与自动快照的快照额度分别提升至256份。|2019-09-02|全部|[快照概述](/cn.zh-CN/快照/快照概述.md)|
