--- a/intl.zh-CN/动态与公告/新功能发布记录.md
+++ b/intl.zh-CN/动态与公告/新功能发布记录.md
@@ -10,6 +10,7 @@
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
 |实例规格族|发布通用型实例规格族g7、计算型实例规格族c7、内存型实例规格族r7。|2021-04-19|部分|[实例规格族](/intl.zh-CN/实例/实例规格族.md)|
+|镜像|发布公共镜像Alibaba Cloud Linux 3。|2021-04-16|部分|[Alibaba Cloud Linux 3概述](/intl.zh-CN/镜像/Alibaba Cloud Linux 3/Alibaba Cloud Linux 3概述.md)|
 |预留实例券|预留实例券支持抵扣更多规格族。|2021-04-15|全部|[预留实例券概述](/intl.zh-CN/实例/选择实例购买方式/预留实例券/预留实例券概述.md)|
 |快照|发布实例快照功能，您可以为一台ECS实例中的多个云盘同时创建快照，保证数据写入时序上的一致性。|2021-04-06|部分|[创建多个云盘快照（实例快照）](/intl.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)|
 |快照|发布应用一致性快照功能，您使用应用一致性快照进行回滚时，可确保应用处于一致性的启动状态。|2021-04-06|部分|[开启应用一致性快照功能](/intl.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md)|
