--- a/cn.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md
+++ b/cn.zh-CN/产品计费/计费方式/按量付费实例停机不收费.md
@@ -22,6 +22,10 @@ keyword: [按量付费, 停机不收费, 计算资源, 公网IP地址, 保留并
 
     包含本地存储能力的实例规格族不支持停机不收费，例如d1、d1ne、i1、i2、i2g和gn5。更多信息，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)中的本地存储列。
 
+-   实例规格族不包含持久内存
+
+    包含持久内存的实例规格族不支持停机不收费，例如re6p、re6p-redis。更多信息，请参见[实例规格族](/cn.zh-CN/实例/实例规格族.md)中的持久内存列。
+
 
 停机不收费功能默认为关闭状态，您可以自行开启，具体操作请参见下文[开启默认按量付费实例停机不收费](#default)。
 
