--- a/intl.zh-CN/块存储/云盘/更换系统盘/更换系统盘（公共镜像）.md
+++ b/intl.zh-CN/块存储/云盘/更换系统盘/更换系统盘（公共镜像）.md
@@ -6,7 +6,7 @@ keyword: [更换操作系统, 更换镜像, 重装系统, 重装windows, 重装L
 
 更换系统盘即更换ECS实例的操作系统。更换时会为ECS实例重新分配一块系统盘，此时系统盘ID会更新，旧系统盘会被释放。系统盘的云盘类型、实例IP地址以及弹性网卡MAC地址保持不变。如果您在创建ECS实例时选择了错误的操作系统，或者需要使用其他操作系统，您能通过更换系统盘来更换操作系统。
 
--   更换系统盘后旧系统盘会被释放，建议您为当前系统盘创建快照备份数据。具体操作，请参见[创建快照](/intl.zh-CN/快照/使用快照/创建普通快照.md)。
+-   更换系统盘后旧系统盘会被释放，建议您为当前系统盘创建快照备份数据。具体操作，请参见[创建快照](/intl.zh-CN/快照/使用快照/创建一个云盘快照.md)。
 
     **说明：** 创建快照应避开业务高峰期，避免影响业务。一块40 GiB的系统盘，首次创建快照需要约20分钟，请预留出足够的时间。
 
@@ -40,7 +40,7 @@ keyword: [更换操作系统, 更换镜像, 重装系统, 重装windows, 重装L
 
 1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-2.  在左侧导航栏，单击**实例与镜像** \> **实例**。
+2.  在左侧导航栏，选择**实例与镜像** \> **实例**。
 
 3.  在顶部菜单栏左上角处，选择地域。
 
@@ -72,11 +72,11 @@ keyword: [更换操作系统, 更换镜像, 重装系统, 重装windows, 重装L
 
         -   Windows Server系统只支持密码认证。
 
-            ![操作系统是Windows系统，您只能使用密码认证](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1263359951/p5517.png)
+            ![操作系统是Windows系统，您只能使用密码认证](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1263359951/p5517.png)
 
         -   I/O优化实例的Linux系统支持密码认证或SSH密钥对认证。
 
-            ![设置登录密码或者绑定SSH密钥对](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1263359951/p5518.png)
+            ![设置登录密码或者绑定SSH密钥对](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1263359951/p5518.png)
 
     4.  选中**《云服务器 ECS 服务条款》\|《通用服务条款》**。
 
@@ -100,9 +100,4 @@ keyword: [更换操作系统, 更换镜像, 重装系统, 重装windows, 重装L
     5.  运行命令`df -h`，查看文件系统空间和使用情况。
     挂载分区后，不需要重启实例即可开始使用数据盘。
 
-
-**相关文档**  
-
-
-[ReplaceSystemDisk](/intl.zh-CN/API参考/磁盘/ReplaceSystemDisk.md)
 
