--- a/intl.zh-CN/块存储/云盘/创建云盘/使用快照创建云盘.md
+++ b/intl.zh-CN/块存储/云盘/创建云盘/使用快照创建云盘.md
@@ -47,7 +47,7 @@ keyword: [快照, 新盘, ecs, 复制云盘]
     -   **加密**：适用于数据安全或法规合规等场景，自动加密保护存储在云盘上的数据。 |
     |购买量|选择需要购买的云盘数量。**说明：**
 
-    -   购买时请注意ECS实例数据盘的数量。一台ECS实例一般最多挂载16块数据盘，但少数规格族（g6se）可以超过16块。更多信息，请参见[块存储使用限制](/intl.zh-CN/产品简介/使用限制.md)。
+    -   购买时请注意ECS实例数据盘的数量。一台ECS实例最多挂载16块数据盘。更多信息，请参见[块存储使用限制](/intl.zh-CN/产品简介/使用限制.md)。
     -   按量付费云盘存在容量配额，您购买的总容量（云盘容量 \* 购买量）不能超过容量配额。在创建页面选择云盘类型后会显示已购买和可购买的容量。 |
     |释放设置|设置云盘或自动快照是否随实例释放。仅选择**挂载到ECS实例**时可设置。|
     |服务协议|选中服务协议。|
