--- a/cn.zh-CN/块存储/云盘基础操作/挂载数据盘.md
+++ b/cn.zh-CN/块存储/云盘基础操作/挂载数据盘.md
@@ -14,7 +14,7 @@ keyword: [挂载云盘, 挂载, 新建云盘, ecs, 阿里云]
 挂载云盘前，您需要了解以下事项：
 
 -   随ECS实例一起创建的云盘，和为包年包月实例创建的包年包月数据盘，已自动挂载到相应实例，无需手动挂载。
--   一台ECS实例一般最多挂载16块数据盘，但少数规格族（g6se）可以超过16块。更多信息，请参见[块存储使用限制](/cn.zh-CN/产品简介/使用限制.md)。
+-   一台ECS实例最多挂载16块数据盘。更多信息，请参见[块存储使用限制](/cn.zh-CN/产品简介/使用限制.md)。
 -   一块云盘只能挂载到一台ECS实例上。
 
 **说明：** 本文步骤中的挂载操作指在控制台将云盘挂载到ECS实例，并非在ECS实例操作系统内通过`mount`命令挂载文件系统。格式化数据盘并挂载文件系统的操作，请参见[Linux格式化数据盘](/cn.zh-CN/块存储/云盘基础操作/分区格式化数据盘/Linux格式化数据盘.md)和[Windows格式化数据盘](/cn.zh-CN/块存储/云盘基础操作/分区格式化数据盘/Windows格式化数据盘.md)。
