--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -54,17 +54,17 @@ g7的特点如下：
 
 g7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.g7.large|2|8.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.g7.xlarge|4|16.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.g7.2xlarge|8|32.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.g7.3xlarge|12|48.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.g7.4xlarge|16|64.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.g7.6xlarge|24|96.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.g7.8xlarge|32|128.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.g7.16xlarge|64|256.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.g7.32xlarge|128|512.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.g7.large|2|8.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.g7.xlarge|4|16.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.g7.2xlarge|8|32.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.g7.3xlarge|12|48.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.g7.4xlarge|16|64.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.g7.6xlarge|24|96.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.g7.8xlarge|32|128.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.g7.16xlarge|64|256.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.g7.32xlarge|128|512.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -104,17 +104,17 @@ g7t的特点如下：
 
 g7t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|----------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.g7t.large|2|8.0|4.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.g7t.xlarge|4|16.0|8.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.g7t.2xlarge|8|32.0|16.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.g7t.3xlarge|12|48.0|24.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.g7t.4xlarge|16|64.0|32.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.g7t.6xlarge|24|96.0|48.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.g7t.8xlarge|32|128.0|64.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.g7t.16xlarge|64|256.0|128.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.g7t.32xlarge|128|512.0|256.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|----------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.g7t.large|2|8.0|4.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.g7t.xlarge|4|16.0|8.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.g7t.2xlarge|8|32.0|16.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.g7t.3xlarge|12|48.0|24.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.g7t.4xlarge|16|64.0|32.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.g7t.6xlarge|24|96.0|48.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.g7t.8xlarge|32|128.0|64.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.g7t.16xlarge|64|256.0|128.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.g7t.32xlarge|128|512.0|256.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -145,16 +145,16 @@ g7ne的特点如下：
 
 g7ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.g7ne.large|2|8.0|1.5|10.0|90|45|2|3|10|1.0|0.75|
-|ecs.g7ne.xlarge|4|16.0|3.0|10.0|100|90|4|4|15|2.0|1.0|
-|ecs.g7ne.2xlarge|8|32.0|6.0|15.0|150|175|8|6|15|2.5|1.2|
-|ecs.g7ne.4xlarge|16|64.0|12.5|25.0|300|350|16|8|30|4.0|2.0|
-|ecs.g7ne.8xlarge|32|128.0|25.0|无|600|600|16|8|30|7.5|5.0|
-|ecs.g7ne.12xlarge|48|192.0|40.0|无|1200|800|32|8|30|10.0|8.0|
-|ecs.g7ne.16xlarge|64|256.0|50.0|无|1600|1400|32|8|30|15.0|8.0|
-|ecs.g7ne.24xlarge|96|384.0|80.0|无|2400|1600|32|15|50|24.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|--------------|--------------|:-------|---|---|:---|-------|------|------------|
+|ecs.g7ne.large|2|8.0|1.5|10.0|90万|45万|2|3|10|1.0万|0.75|
+|ecs.g7ne.xlarge|4|16.0|3.0|10.0|100万|90万|4|4|15|2.0万|1.0|
+|ecs.g7ne.2xlarge|8|32.0|6.0|15.0|150万|175万|8|6|15|2.5万|1.2|
+|ecs.g7ne.4xlarge|16|64.0|12.5|25.0|300万|350万|16|8|30|4.0万|2.0|
+|ecs.g7ne.8xlarge|32|128.0|25.0|无|600万|600万|16|8|30|7.5万|5.0|
+|ecs.g7ne.12xlarge|48|192.0|40.0|无|1200万|800万|32|8|30|10.0万|8.0|
+|ecs.g7ne.16xlarge|64|256.0|50.0|无|1600万|1400万|32|8|30|15.0万|8.0|
+|ecs.g7ne.24xlarge|96|384.0|80.0|无|2400万|1600万|32|15|50|24.0万|16.0|
 
 **说明：**
 
@@ -168,10 +168,6 @@ g7ne包括的实例规格及指标数据如下表所示。
 g6se的特点如下：
 
 -   g6se为存储增强型实例，单实例顺序读写性能最高可达32 Gbit/s
--   最大挂载数据盘数量支持64块
-
-    **说明：** 创建实例时最多挂载16块数据盘，如果实例需要更多数据盘，请在创建实例后继续挂载。具体操作，请参见[挂载数据盘](/cn.zh-CN/块存储/云盘基础操作/挂载数据盘.md)。
-
 -   计算：
     -   处理器与内存配比为1:4
     -   处理器：2.5 GHz主频的Intel ® Xeon ® Platinum 8269CY（Cascade Lake），睿频3.2 GHz，计算性能稳定
@@ -194,15 +190,14 @@ g6se的特点如下：
 
 g6se包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|最大挂载数据盘数量|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:----------|---|:---|-------|---------|---------|------------|
-|ecs.g6se.large|2|8.0|0.7|10.0|30|2|2|6|16|3.0|1.5|
-|ecs.g6se.xlarge|4|16.0|1.0|10.0|50|4|3|10|16|6.0|2.0|
-|ecs.g6se.2xlarge|8|32.0|1.5|10.0|80|8|4|10|16|9.0|3.0|
-|ecs.g6se.4xlarge|16|64.0|3.0|10.0|100|8|8|20|24|15.0|5.0|
-|ecs.g6se.8xlarge|32|128.0|6.0|无|200|16|8|20|32|30.0|10.0|
-|ecs.g6se.13xlarge|52|192.0|8.0|无|300|32|7|20|48|50.0|16.0|
-|ecs.g6se.26xlarge|104|384.0|16.0|无|600|52|15|20|64|90.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|--------------|--------------|:-------|---|:---|-------|------|------------|
+|ecs.g6se.large|2|8.0|0.7|2.0|30万|2|2|6|3.0万|1.5|
+|ecs.g6se.xlarge|4|16.0|1.0|3.0|50万|4|3|10|6.0万|2.0|
+|ecs.g6se.2xlarge|8|32.0|1.5|5.0|80万|8|4|10|9.0万|3.0|
+|ecs.g6se.4xlarge|16|64.0|3.0|6.0|100万|8|8|20|15.0万|5.0|
+|ecs.g6se.8xlarge|32|128.0|6.0|无|200万|16|8|20|30.0万|10.0|
+|ecs.g6se.13xlarge|52|192.0|8.0|无|300万|32|7|20|50.0万|16.0|
 
 **说明：**
 
@@ -243,16 +238,16 @@ g6a的特点如下：
 
 g6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:----------|:---|---------|------------|
-|ecs.g6a.large|2|8.0|1.0|10.0|90|2|1.25|1.0|
-|ecs.g6a.xlarge|4|16.0|1.5|10.0|100|3|2.0|1.5|
-|ecs.g6a.2xlarge|8|32.0|2.5|10.0|160|4|3.0|2.0|
-|ecs.g6a.4xlarge|16|64.0|5.0|10.0|200|8|6.0|3.0|
-|ecs.g6a.8xlarge|32|128.0|8.0|10.0|300|7|7.5|4.0|
-|ecs.g6a.16xlarge|64|256.0|16.0|无|600|8|15.0|8.0|
-|ecs.g6a.32xlarge|128|512.0|32.0|无|1200|15|30.0|16.0|
-|ecs.g6a.64xlarge|256|1024.0|64.0|无|2400|15|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|--------------|--------------|:-------|:---|------|------------|
+|ecs.g6a.large|2|8.0|1.0|10.0|90万|2|1.25万|1.0|
+|ecs.g6a.xlarge|4|16.0|1.5|10.0|100万|3|2.0万|1.5|
+|ecs.g6a.2xlarge|8|32.0|2.5|10.0|160万|4|3.0万|2.0|
+|ecs.g6a.4xlarge|16|64.0|5.0|10.0|200万|8|6.0万|3.0|
+|ecs.g6a.8xlarge|32|128.0|8.0|10.0|300万|7|7.5万|4.0|
+|ecs.g6a.16xlarge|64|256.0|16.0|无|600万|8|15.0万|8.0|
+|ecs.g6a.32xlarge|128|512.0|32.0|无|1200万|15|30.0万|16.0|
+|ecs.g6a.64xlarge|256|1024.0|64.0|无|2400万|15|60.0万|32.0|
 
 **说明：**
 
@@ -297,15 +292,15 @@ g6t的特点如下：
 
 g6t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|------|:--|:---|-------|---------|------------|
-|ecs.g6t.large|2|8.0|突发最高10.0|90|是|最高25|2|3|6|2.0|1.0|
-|ecs.g6t.xlarge|4|16.0|突发最高10.0|100|是|最高25|4|4|15|4.0|1.5|
-|ecs.g6t.2xlarge|8|32.0|突发最高10.0|160|是|最高25|8|4|15|5.0|2.0|
-|ecs.g6t.4xlarge|16|64.0|突发最高10.0|300|是|30|8|8|30|8.0|3.0|
-|ecs.g6t.8xlarge|32|128.0|10.0|600|是|60|16|8|30|15.0|5.0|
-|ecs.g6t.13xlarge|52|192.0|16.0|900|是|90|32|7|30|24.0|8.0|
-|ecs.g6t.26xlarge|104|384.0|32.0|2400|是|180|32|15|30|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|------|---|:--|:---|-------|------|------------|
+|ecs.g6t.large|2|8.0|突发最高10.0|90万|是|最高25万|2|3|6|2.0万|1.0|
+|ecs.g6t.xlarge|4|16.0|突发最高10.0|100万|是|最高25万|4|4|15|4.0万|1.5|
+|ecs.g6t.2xlarge|8|32.0|突发最高10.0|160万|是|最高25万|8|4|15|5.0万|2.0|
+|ecs.g6t.4xlarge|16|64.0|突发最高10.0|300万|是|30万|8|8|30|8.0万|3.0|
+|ecs.g6t.8xlarge|32|128.0|10.0|600万|是|60万|16|8|30|15.0万|5.0|
+|ecs.g6t.13xlarge|52|192.0|16.0|900万|是|90万|32|7|30|24.0万|8.0|
+|ecs.g6t.26xlarge|104|384.0|32.0|2400万|是|180万|32|15|30|48.0万|16.0|
 
 **说明：**
 
@@ -350,15 +345,15 @@ g6e的特点如下：
 
 g6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.g6e.large|2|8.0|突发最高10.0|90|最高25|2|3|6|2.0|1.0|
-|ecs.g6e.xlarge|4|16.0|突发最高10.0|100|最高25|4|4|15|4.0|1.5|
-|ecs.g6e.2xlarge|8|32.0|突发最高10.0|160|最高25|8|4|15|5.0|2.0|
-|ecs.g6e.4xlarge|16|64.0|突发最高10.0|300|30|8|8|30|8.0|3.0|
-|ecs.g6e.8xlarge|32|128.0|10.0|600|60|16|8|30|15.0|5.0|
-|ecs.g6e.13xlarge|52|192.0|16.0|900|90|32|7|30|24.0|8.0|
-|ecs.g6e.26xlarge|104|384.0|32.0|2400|180|32|15|30|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.g6e.large|2|8.0|突发最高10.0|90万|最高25万|2|3|6|2.0万|1.0|
+|ecs.g6e.xlarge|4|16.0|突发最高10.0|100万|最高25万|4|4|15|4.0万|1.5|
+|ecs.g6e.2xlarge|8|32.0|突发最高10.0|160万|最高25万|8|4|15|5.0万|2.0|
+|ecs.g6e.4xlarge|16|64.0|突发最高10.0|300万|30万|8|8|30|8.0万|3.0|
+|ecs.g6e.8xlarge|32|128.0|10.0|600万|60万|16|8|30|15.0万|5.0|
+|ecs.g6e.13xlarge|52|192.0|16.0|900万|90万|32|7|30|24.0万|8.0|
+|ecs.g6e.26xlarge|104|384.0|32.0|2400万|180万|32|15|30|48.0万|16.0|
 
 **说明：**
 
@@ -407,17 +402,17 @@ g6的特点如下：
 
 g6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.g6.large|2|8.0|1.0|3.0|30|最高25|2|2|6|1.0|1|
-|ecs.g6.xlarge|4|16.0|1.5|5.0|50|最高25|4|3|10|2.0|1.5|
-|ecs.g6.2xlarge|8|32.0|2.5|8.0|80|最高25|8|4|10|2.5|2|
-|ecs.g6.3xlarge|12|48.0|4.0|10.0|90|最高25|8|6|10|3.0|2.5|
-|ecs.g6.4xlarge|16|64.0|5.0|10.0|100|30|8|8|20|4.0|3|
-|ecs.g6.6xlarge|24|96.0|7.5|10.0|150|45|12|8|20|5.0|4|
-|ecs.g6.8xlarge|32|128.0|10.0|无|200|60|16|8|20|6.0|5|
-|ecs.g6.13xlarge|52|192.0|12.5|无|300|90|32|7|20|10.0|8|
-|ecs.g6.26xlarge|104|384.0|25.0|无|600|180|32|15|20|20.0|16|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.g6.large|2|8.0|1.0|3.0|30万|最高25万|2|2|6|1.0万|1|
+|ecs.g6.xlarge|4|16.0|1.5|5.0|50万|最高25万|4|3|10|2.0万|1.5|
+|ecs.g6.2xlarge|8|32.0|2.5|8.0|80万|最高25万|8|4|10|2.5万|2|
+|ecs.g6.3xlarge|12|48.0|4.0|10.0|90万|最高25万|8|6|10|3.0万|2.5|
+|ecs.g6.4xlarge|16|64.0|5.0|10.0|100万|30万|8|8|20|4.0万|3|
+|ecs.g6.6xlarge|24|96.0|7.5|10.0|150万|45万|12|8|20|5.0万|4|
+|ecs.g6.8xlarge|32|128.0|10.0|无|200万|60万|16|8|20|6.0万|5|
+|ecs.g6.13xlarge|52|192.0|12.5|无|300万|90万|32|7|20|10.0万|8|
+|ecs.g6.26xlarge|104|384.0|25.0|无|600万|180万|32|15|20|20.0万|16|
 
 **说明：**
 
@@ -453,16 +448,16 @@ g5的特点如下：
 
 g5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.g5.large|2|8.0|1.0|30|2|2|6|
-|ecs.g5.xlarge|4|16.0|1.5|50|2|3|10|
-|ecs.g5.2xlarge|8|32.0|2.5|80|2|4|10|
-|ecs.g5.3xlarge|12|48.0|4.0|90|4|6|10|
-|ecs.g5.4xlarge|16|64.0|5.0|100|4|8|20|
-|ecs.g5.6xlarge|24|96.0|7.5|150|6|8|20|
-|ecs.g5.8xlarge|32|128.0|10.0|200|8|8|20|
-|ecs.g5.16xlarge|64|256.0|20.0|400|16|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.g5.large|2|8.0|1.0|30万|2|2|6|
+|ecs.g5.xlarge|4|16.0|1.5|50万|2|3|10|
+|ecs.g5.2xlarge|8|32.0|2.5|80万|2|4|10|
+|ecs.g5.3xlarge|12|48.0|4.0|90万|4|6|10|
+|ecs.g5.4xlarge|16|64.0|5.0|100万|4|8|20|
+|ecs.g5.6xlarge|24|96.0|7.5|150万|6|8|20|
+|ecs.g5.8xlarge|32|128.0|10.0|200万|8|8|20|
+|ecs.g5.16xlarge|64|256.0|20.0|400万|16|8|20|
 
 **说明：**
 
@@ -495,15 +490,15 @@ g5ne的特点如下：
 
 g5ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.g5ne.large|2|8.0|1.0|40|45|2|3|10|1.0|1|
-|ecs.g5ne.xlarge|4|16.0|2.0|75|90|4|4|15|1.5|1|
-|ecs.g5ne.2xlarge|8|32.0|3.5|150|175|8|6|15|3.0|1|
-|ecs.g5ne.4xlarge|16|64.0|7.0|300|350|16|8|30|6.0|2|
-|ecs.g5ne.8xlarge|32|128.0|15.0|600|700|32|8|30|12.0|4|
-|ecs.g5ne.16xlarge|64|256.0|30.0|1200|1400|32|8|30|24.0|8|
-|ecs.g5ne.18xlarge|72|288.0|33.0|1350|1600|32|15|50|27.0|9|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|---|:--|:---|-------|------|------------|
+|ecs.g5ne.large|2|8.0|1.0|40万|45万|2|3|10|1.0万|1|
+|ecs.g5ne.xlarge|4|16.0|2.0|75万|90万|4|4|15|1.5万|1|
+|ecs.g5ne.2xlarge|8|32.0|3.5|150万|175万|8|6|15|3.0万|1|
+|ecs.g5ne.4xlarge|16|64.0|7.0|300万|350万|16|8|30|6.0万|2|
+|ecs.g5ne.8xlarge|32|128.0|15.0|600万|700万|32|8|30|12.0万|4|
+|ecs.g5ne.16xlarge|64|256.0|30.0|1200万|1400万|32|8|30|24.0万|8|
+|ecs.g5ne.18xlarge|72|288.0|33.0|1350万|1600万|32|15|50|27.0万|9|
 
 **说明：**
 
@@ -533,16 +528,16 @@ sn2ne的特点如下：
 
 sn2ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.sn2ne.large|2|8.0|1.0|30|2|2|6|
-|ecs.sn2ne.xlarge|4|16.0|1.5|50|2|3|10|
-|ecs.sn2ne.2xlarge|8|32.0|2.0|100|4|4|10|
-|ecs.sn2ne.3xlarge|12|48.0|2.5|130|4|6|10|
-|ecs.sn2ne.4xlarge|16|64.0|3.0|160|4|8|20|
-|ecs.sn2ne.6xlarge|24|96.0|4.5|200|6|8|20|
-|ecs.sn2ne.8xlarge|32|128.0|6.0|250|8|8|20|
-|ecs.sn2ne.14xlarge|56|224.0|10.0|450|14|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.sn2ne.large|2|8.0|1.0|30万|2|2|6|
+|ecs.sn2ne.xlarge|4|16.0|1.5|50万|2|3|10|
+|ecs.sn2ne.2xlarge|8|32.0|2.0|100万|4|4|10|
+|ecs.sn2ne.3xlarge|12|48.0|2.5|130万|4|6|10|
+|ecs.sn2ne.4xlarge|16|64.0|3.0|160万|4|8|20|
+|ecs.sn2ne.6xlarge|24|96.0|4.5|200万|6|8|20|
+|ecs.sn2ne.8xlarge|32|128.0|6.0|250万|8|8|20|
+|ecs.sn2ne.14xlarge|56|224.0|10.0|450万|14|8|20|
 
 **说明：**
 
