--- a/intl.zh-CN/实例/选择实例规格/计算型.md
+++ b/intl.zh-CN/实例/选择实例规格/计算型.md
@@ -116,6 +116,8 @@ c7t包括的实例规格及指标数据如下表所示。
 
 **说明：**
 
+-   本实例规格族正在邀测中，资源有限，无SLA保证。如果您确认申请使用，请按照业务最小需求申请。
+-   Intel Ice Lake仅支持基于Intel SGX DCAP的远程证明方式，不支持基于Intel EPID的远程证明方式，您可能需要适配程序后才能正常使用远程证明功能。更多远程证明的信息，请参见[attestation-service](https://software.intel.com/content/www/us/en/develop/topics/software-guard-extensions/attestation-services.html)。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
 
