--- a/cn.zh-CN/安全/安全组/添加安全组规则.md
+++ b/cn.zh-CN/安全/安全组/添加安全组规则.md
@@ -1,15 +1,12 @@
 ---
-keyword: [安全组规则, 安全组, ECS安全组规则]
+keyword: [安全组规则, ACL访问控制列表, 禁止访问服务器, 允许访问服务器]
 ---
 
 # 添加安全组规则
 
 您可以通过添加安全组规则，允许或禁止安全组内的ECS实例对公网或私网的访问。
 
-添加安全组规则之前，请确认以下信息：
-
--   您已经创建了一个安全组。具体操作，请参见[创建安全组](/cn.zh-CN/安全/安全组/创建安全组.md)。
--   您已经知道ECS实例需要允许或禁止哪些公网或内网的访问。更多有关安全组规则设置的应用案例，请参见[安全组应用案例](/cn.zh-CN/安全/安全组/安全组应用案例.md)。
+添加安全组规则之前，您已经规划好ECS实例需要允许或禁止哪些公网或内网的访问。更多有关安全组规则设置的应用案例，请参见[安全组应用案例](/cn.zh-CN/安全/安全组/安全组应用案例.md)。
 
 安全组负责管理是否放行来自公网或者内网的访问请求。为安全起见，安全组入方向大多采取拒绝访问策略。如果您使用的是默认安全组，则系统会给部分通信端口自动添加安全组规则。
 
@@ -28,17 +25,19 @@ keyword: [安全组规则, 安全组, ECS安全组规则]
 
 -   每个安全组的入方向规则与出方向规则的总数不能超过200条。
 
-更多详情，请参见[安全组概述](/cn.zh-CN/安全/安全组/安全组概述.md)。
+更多信息，请参见[安全组概述](/cn.zh-CN/安全/安全组/安全组概述.md)。
 
-1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
+1.  进入安全组页面。
 
-2.  在左侧导航栏，选择**网络与安全** \> **安全组**。
+    1.  登录[ECS管理控制台](https://ecs.console.aliyun.com)。
 
-3.  在顶部菜单栏左上角处，选择地域。
+    2.  在左侧导航栏，选择**网络与安全** \> **安全组**。
 
-4.  找到要配置授权规则的安全组，在**操作**列中，单击**配置规则**。
+    3.  在顶部菜单栏左上角处，选择地域。
 
-5.  选择安全组规则的规则方向。
+2.  找到目标安全组，在**操作**列中，单击**配置规则**。
+
+3.  选择安全组规则的规则方向。
 
     |网络类型|选择规则方向|
     |----|------|
@@ -49,80 +48,59 @@ keyword: [安全组规则, 安全组, ECS安全组规则]
     -   入方向：内网入方向
     -   出方向：内网出方向 |
 
-6.  在安全组规则页面上，您可以选择以下任意一种方式添加安全组规则。
+4.  在安全组规则页面上，添加安全组规则。
 
     -   方式一：快速添加安全组规则
 
-        适用于无需设置ICMP、GRE协议规则，并通过勾选多个端口便能完成操作的场景。**快速添加**提供了SSH 22、telnet 23、HTTP 80、HTTPS 443、MS SQL 1433、Oracle 1521、MySQL 3306、RDP 3389、PostgreSQL 5432和Redis 6379的应用端口设置。您可以同时勾选一个或多个端口。
+        适用于快速设置常用的TCP协议规则，您单击**快速添加**后，只需要设置**授权策略**、**授权对象**，并选中一个或多个端口便能完成。
 
-        1.  单击**快速添加**。
-        2.  设置**授权策略**、**授权对象**和**端口范围**。
-
-            **说明：** 参数设置的详细指导请参见[表 2](#table_g01_09k_j57)。
-
-        3.  单击**确定**。
     -   方式二：手动添加安全组规则
-        1.  单击**手动添加**。
-        2.  在规则列表中配置新增的安全组规则。
 
-            |名称|描述|
-            |--|--|
-            |授权策略|            -   **允许**：放行该端口相应的访问请求。
-            -   **拒绝**：直接丢弃数据包，不会返回任何回应信息。如果两个安全组规则其他都相同只有授权策略不同，则**拒绝**授权生效，**允许**策略不生效。 |
-            |优先级|优先级数值越小，优先级越高，取值范围为1~100。|
-            |协议类型|支持协议类型包括：             -   **全部**
-            -   **自定义TCP**
-            -   **自定义UDP**
-            -   **全部ICMP（IPv4）**
-            -   **全部GRE**
-**协议类型**和**端口范围**的关系参见[表 3](#table_igi_6jy_v9s)。更多常用端口信息，请参见[常用端口](/cn.zh-CN/安全/安全组/常用端口.md)。|
-            |端口范围|**协议类型**为**自定义TCP**或**自定义UDP**时，可自定义设置。手动输入端口范围，多个端口范围以英文半角逗号分隔，例如`22/23,443/443`。|
-            |授权对象|支持以下方式设置授权对象。             -   IPv4地址段
-                -   填写单一IP地址或者CIDR网段格式，如：12.1.1.1或13.1.1.1/25。
+        支持自定义配置授权策略、优先级、协议类型等信息。具体操作，如下所示。
 
-关于CIDR格式介绍，请参见[网络FAQ](/cn.zh-CN/网络/网络FAQ.md)。
+    1.  单击**手动添加**。
 
-                -   支持多组授权对象，用英文半角逗号（,）隔开，最多支持10组授权对象。
-                -   如果填写0.0.0.0/0表示允许或拒绝所有IP地址的访问，设置时请务必谨慎。
-            -   IPv6地址段
-                -   填写单一IP地址或者CIDR网段格式，如2408:4321:180:1701:94c7:bc38:3bfa:\*\*\*或2408:4321:180:1701:94c7:bc38:3bfa:\*\*\*/128。
-                -   支持多组授权对象，用英文半角逗号（,）隔开，最多支持10组授权对象。
-                -   如果填写::/0表示允许或拒绝所有IP地址的访问，设置时请务必谨慎。
-            -   安全组
+    2.  在规则列表中，配置新增的安全组规则。
+
+        |名称|描述|
+        |--|--|
+        |授权策略|        -   **允许**：放行该端口相应的访问请求。
+        -   **拒绝**：直接丢弃数据包，不会返回任何回应信息。
+如果两个安全组规则其他都相同只有授权策略不同，则**拒绝**授权生效，**允许**策略不生效。 |
+        |优先级|优先级数值越小，优先级越高，取值范围为1~100。|
+        |协议类型|协议类型包括：         -   **全部**：支持全部协议类型。
+        -   **自定义TCP**：支持TCP协议。
+        -   **自定义UDP**：支持UDP协议。
+        -   **全部ICMP（IPv4）**：支持ICMP（IPv4）协议。
+        -   **全部ICMP（IPv6）**：支持ICMP（IPv6）协议。
+        -   **全部GRE**：支持GRE协议。
+关于**协议类型**和**端口范围**的更多信息，请参见[添加安全组规则](/cn.zh-CN/安全/安全组/添加安全组规则.md)或[常用端口](/cn.zh-CN/安全/安全组/常用端口.md)。|
+        |端口范围|**协议类型**为**自定义TCP**或**自定义UDP**时，可手动设置端口访问。多个端口范围以英文半角逗号分隔，例如`22/23,443/443`。|
+        |授权对象|支持以下方式设置授权对象。         -   IP地址
+
+设置单一IP地址，例如192.168.0.100、2408:4321:180:1701:94c7:bc38:3bfa:。
+
+        -   CIDR地址块：
+
+设置IP地址段，例如192.168.0.0/24、2408:4321:180:1701:94c7:bc38:3bfa:\*\*\*/128。关于CIDR介绍，请参见[什么是CIDR？](/cn.zh-CN/网络/网络FAQ.md)。
+
+        -   安全组
+
+安全组访问只对内网有效。授权本账号或其他账号下某个安全组中的ECS实例访问本安全组中的ECS实例，实现内网互通。
 
 **说明：** 企业安全组不支持授权安全组访问。
 
-安全组访问只对内网有效。授权本账号或其他账号下某个安全组中的ECS实例访问本安全组中的ECS实例，实现内网互通。设置公网访问只能通过CIDR网段方式授权。
+            -   本账号授权：填写同账号下的目标安全组ID。如果是专有网络VPC类型的安全组，目的安全组必须在同一个专有网络VPC中。
+            -   跨账号授权：填写目标阿里云账号ID和目标安全组ID（格式为`目标阿里云账号ID/目标安全组ID`）。在**账号管理** \> **安全设置**里查看阿里云账号ID。
+设置注意事项如下：
 
-                -   本账号授权：选择同一账号下的其他安全组ID。如果是专有网络VPC类型的安全组，目的端必须为同一个专有网络VPC中的安全组。
-                -   跨账号授权：填写目标安全组ID，以及对方账号ID。在**账号管理** \> **安全设置**里查看账号ID。
-**说明：** 出于安全性考虑，经典网络的内网入方向规则，授权对象优先使用安全组。如果使用IP地址，则只能授权单一IP地址，不能使用IP地址段。 |
-            |描述|安全组规则描述信息。|
+        -   支持多组授权对象，用英文半角逗号（,）隔开，最多支持10组授权对象。
+        -   如果填写0.0.0.0/0（或::/0）表示所有IP地址的访问，设置时请务必谨慎。
+        -   出于安全性考虑，经典网络的内网入方向规则，授权对象优先使用安全组。如果使用IP地址，则只能授权单一IP地址，不能使用CIDR地址块。 |
+        |描述|安全组规则描述信息。|
 
-            |协议类型|端口显示范围|应用场景|
-            |:---|:-----|:---|
-            |全部|-1/-1，表示不限制端口。不支持设置。|可用于完全互相信任的应用场景。|
-            |全部 ICMP（IPv4）|-1/-1，表示不限制端口。不支持设置。|使用`ping`程序检测ECS实例之间的通信状况。|
-            |全部 ICMP（IPv6）|-1/-1，表示不限制端口。不支持设置。|使用`ping6`程序检测ECS实例之间的通信状况。|
-            |全部 GRE|-1/-1，表示不限制端口。不支持设置。|用于VPN服务。|
-            |自定义 TCP|自定义端口范围，有效的端口值是1 ~ 65535。 必须采用<开始端口\>/<结束端口\>的格式。例如80/80表示端口80，1/22表示1到22端口。
+    3.  在规则的**操作**列中，单击**保存**。
 
-|可用于允许或拒绝一个或几个连续的端口。|
-            |自定义 UDP|
-            |SSH|22/22|用于SSH远程连接到Linux实例。连接ECS实例后您能修改端口号，具体操作，请参见[修改服务器默认远程端口](/cn.zh-CN/最佳实践/安全/修改服务器默认远程端口.md)。|
-            |TELNET|23/23|用于Telnet远程登录ECS实例。|
-            |HTTP|80/80|ECS实例作为网站或Web应用服务器。|
-            |HTTPS|443/443|ECS实例作为支持HTTPS协议的网站或Web应用服务器。|
-            |MS SQL|1433/1433|ECS实例作为MS SQL服务器。|
-            |Oracle|1521/1521|ECS实例作为Oracle SQL服务器。|
-            |MySQL|3306/3306|ECS实例作为MySQL服务器。|
-            |RDP|3389/3389|用于通过远程桌面协议连接到Windows实例。连接ECS实例后您能修改端口号，具体操作，请参见[修改服务器默认远程端口](/cn.zh-CN/最佳实践/安全/修改服务器默认远程端口.md)。|
-            |PostgreSQL|5432/5432|ECS实例作为PostgreSQL服务器。|
-            |Redis|6379/6379|ECS实例作为Redis服务器。|
-
-            **说明：** 公网出方向的SMTP端口25默认受限，无法通过安全组规则打开。如果您需要使用SMTP 25端口，请自行规避安全风险，然后申请解封端口25。具体操作，请参见[申请解封端口25](https://help.aliyun.com/document_detail/56130.html)。
-
-        3.  在规则的**操作**列中，单击**保存**。
     以下示例演示了如何在安全组添加安全组规则。
 
     ![添加安全组规则](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5634129951/p128550.gif)
@@ -132,15 +110,53 @@ keyword: [安全组规则, 安全组, ECS安全组规则]
 
 ![刷新安全组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5634129951/p48360.png)
 
-每台ECS实例至少属于一个安全组，您可以根据业务需要，将ECS实例加入一个或多个安全组。具体操作，请参见[ECS实例加入安全组](/cn.zh-CN/安全/安全组/ECS实例加入安全组.md)。
+## 常见问题
 
-设置安全组规则后如果发现业务无法访问，您需要排查业务服务是否启动、服务端口和安全组规则是否一致等问题。更多信息，请参见[安全组常见问题处理]()。
+-   **问题：为什么我配置安全组后还无法访问服务？**
 
-**说明：** 控制台安全组放行某个端口，只能说明安全组没有限制这个端口的访问，不能说明这个端口已经开启。 如需外网访问ECS服务器的端口需要满足以下三个必要条件：
+    控制台安全组放行某个端口，只能说明安全组没有限制这个端口的访问，不能说明这个端口已经开启。 如需外网访问ECS服务器的端口需要满足以下三个必要条件：
 
--   安全组规则放行该端口。
--   对应端口的程序软件是启动运行状态，并且监听地址为0.0.0.0（您可通过执行netstat -ano \|findstr 端口号命令来检测端口是否处于监听状态）。
--   已关闭ECS实例内部防火墙，或者防火墙已放行该端口。
+    -   安全组规则放行该端口。
+    -   对应端口的程序软件是启动运行状态，并且监听地址为0.0.0.0（您可通过执行netstat -ano \|findstr 端口号命令来检测端口是否处于监听状态）。
+    -   已关闭ECS实例内部防火墙，或者防火墙已放行该端口。
+    设置安全组规则后如果发现业务无法访问，您需要排查业务服务是否启动、服务端口和安全组规则是否一致等问题。更多信息，请参见[安全组常见问题处理]()。
+
+-   **问题：为什么我无法使用SMTP 25自建邮箱服务器？**
+
+    公网出方向的SMTP端口25默认受限，无法通过安全组规则打开。如果您需要使用SMTP 25端口，请自行规避安全风险，然后申请解封端口25。具体操作，请参见[申请解封端口25](https://help.aliyun.com/document_detail/56130.html)。
+
+-   **问题：安全组中协议和端口之间是什么关系？**
+
+    安全组中协议和端口信息如下表所示。更多端口信息，请参见[常用端口](/cn.zh-CN/安全/安全组/常用端口.md)。
+
+    |协议类型|端口显示范围|应用场景|
+    |:---|:-----|:---|
+    |全部|-1/-1，表示不限制端口。不支持设置。|可用于完全互相信任的应用场景。|
+    |全部 ICMP（IPv4）|-1/-1，表示不限制端口。不支持设置。|使用`ping`程序检测ECS实例之间的通信状况。|
+    |全部 ICMP（IPv6）|-1/-1，表示不限制端口。不支持设置。|使用`ping6`程序检测ECS实例之间的通信状况。|
+    |全部 GRE|-1/-1，表示不限制端口。不支持设置。|用于VPN服务。|
+    |自定义 TCP|自定义端口范围，有效的端口值是1 ~ 65535。 必须采用<开始端口\>/<结束端口\>的格式。例如80/80表示端口80，1/22表示1到22端口。
+
+|可用于允许或拒绝一个或几个连续的端口。|
+    |自定义 UDP|自定义端口范围，有效的端口值是1 ~ 65535。 必须采用<开始端口\>/<结束端口\>的格式。例如80/80表示端口80，1/22表示1到22端口。
+
+|可用于允许或拒绝一个或几个连续的端口。|
+
+    TCP协议中常用应用和端口如下表所示。
+
+    |服务场景|协议类型|端口显示范围|说明|
+    |----|:---|:-----|:-|
+    |连接服务器|SSH|22/22|用于SSH远程连接到Linux实例。连接ECS实例后您能修改端口号，具体操作，请参见[修改服务器默认远程端口](/cn.zh-CN/最佳实践/安全/修改服务器默认远程端口.md)。|
+    |TELNET|23/23|用于Telnet远程登录ECS实例。|
+    |RDP|3389/3389|用于通过远程桌面协议连接到Windows实例。连接ECS实例后您能修改端口号，具体操作，请参见[修改服务器默认远程端口](/cn.zh-CN/最佳实践/安全/修改服务器默认远程端口.md)。|
+    |网站服务|HTTP|80/80|ECS实例作为网站或Web应用服务器。|
+    |HTTPS|443/443|ECS实例作为支持HTTPS协议的网站或Web应用服务器。|
+    |数据库|MS SQL|1433/1433|ECS实例作为MS SQL服务器。|
+    |Oracle|1521/1521|ECS实例作为Oracle SQL服务器。|
+    |MySQL|3306/3306|ECS实例作为MySQL服务器。|
+    |PostgreSQL|5432/5432|ECS实例作为PostgreSQL服务器。|
+    |Redis|6379/6379|ECS实例作为Redis服务器。|
+
 
 **相关文档**  
 
